--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "antd": "^4.18.5",
     "axios": "^0.25.0",
     "chart.js": "^3.7.0",
+    "html-react-parser": "^1.4.7",
     "millify": "^4.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
